--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_displaymode: ^0.6.0
   flutter_riverpod: ^2.6.1
+  lottie: ^3.3.1
   riverpod: ^2.6.1
 
 dev_dependencies:
@@ -20,7 +22,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/
     - assets/fonts/
+    - assets/lotties/
   
   fonts:
     - family: JosefinSans
