--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_displaymode: ^0.6.0
   flutter_riverpod: ^2.6.1
+  intl: ^0.20.2
   lottie: ^3.3.1
   riverpod: ^2.6.1
 
@@ -25,6 +26,7 @@ flutter:
     - assets/
     - assets/fonts/
     - assets/lotties/
+    - assets/icons/
   
   fonts:
     - family: JosefinSans
