--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,13 @@ dependencies:
   lottie: ^3.3.1
   riverpod: ^2.6.1
   shared_preferences: ^2.5.3
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  change_app_package_name: ^1.5.0
+  # change_app_package_name: ^1.5.0
 
 flutter:
   uses-material-design: true
