--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ flutter:
     - assets/fonts/
     - assets/lotties/
     - assets/icons/
+    - assets/logos/
   
   fonts:
     - family: JosefinSans
